--- a/default/default_config.json
+++ b/default/default_config.json
@@ -18,7 +18,7 @@
     "dark_overlay_color": "#121212"
   },
   "contact": {
-    "qq": "https://qm.qq.com/q/c7DY18rEju",
-    "bilibili": "https://res.abeim.cn/api/qq/?qq=3798522494"
+    "qq": "https://res.abeim.cn/api/qq/?qq=3798522494",
+    "bilibili": "https://b23.tv/O8xAiUJ"
   }
 }
